--- a/linux/PKGBUILD
+++ b/linux/PKGBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Joaquín I. Aramendía (samsagax) <samsagaxg@gmail.com>
 
 pkgbase=linux-chimeraos
-pkgver=6.9.9.chos2
+pkgver=6.10.0
 pkgrel=1
 pkgdesc='Linux ChimeraOS'
 _srctag=v${pkgver%.*}-${pkgver##*.}
@@ -29,7 +29,7 @@ makedepends=(
 options=('!strip')
 _srcname=linux-chimeraos
 source=(
-  "linux-chimeraos.tar.gz::https://github.com/NeroReflex/linux/archive/refs/tags/iio-poll-fix.tar.gz"
+  "linux-chimeraos.tar.gz::https://github.com/NeroReflex/linux/archive/refs/tags/iio-fix-v1.tar.gz"
   config  # the main kernel config file
   config-chimera # our config that will be merged
 )
