--- a/linux/PKGBUILD
+++ b/linux/PKGBUILD
@@ -29,7 +29,7 @@ makedepends=(
 options=('!strip')
 _srcname=linux-chimeraos
 source=(
-  "linux-chimeraos.tar.gz::https://github.com/NeroReflex/linux/archive/refs/tags/iio-fix-v1.tar.gz"
+  "linux-chimeraos.tar.gz::https://gitlab.com/flukejones/linux/-/archive/asus-next-stable/linux-asus-next-stable.tar.gz"
   config  # the main kernel config file
   config-chimera # our config that will be merged
 )
