--- a/linux/PKGBUILD
+++ b/linux/PKGBUILD
@@ -40,9 +40,11 @@ validpgpkeys=(
   A2FF3A36AAA56654109064AB19802F8B0D70FC30  # Jan Alexander Steffens (heftig)
   C7E7849466FE2358343588377258734B41C31549  # David Runge <dvzrv@archlinux.org>
 )
-b2sums=('SKIP'
-        'SKIP'
-         'SKIP')
+b2sums=(
+  'SKIP'
+  'SKIP'
+  'SKIP'
+)
 
 export KBUILD_BUILD_HOST=archlinux
 export KBUILD_BUILD_USER=$pkgbase
